[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lstat"
version = "0.1.0"
description = "Predict ERA5-Land air temperature maps from MODIS LST maps."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "torch>=2.2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
]
tracking = [
  "pillow>=11",
  "wandb>=0.19",
]
fastio = [
  "imagecodecs>=2024.12",
  "tifffile>=2024.12",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
